# qtype-eval

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  check_configs.sh  complexity_probe_sweep_results.csv  dataset_diagnostic.py  finetune_experiments-64425145.err  finetune_experiments-64425145.out  full_complexity_experiments.sh  full_layer_analysis.sh  full_submetric_experiments.sh  full_type_experiments.sh  glot500_crosslingual_results.csv  glot500_monolingual_results.csv  local_test_plan.py  param_sweep_results.csv  probe_results.csv  pyproject.toml  pytest.ini  qtype_probe_sweep_results.csv  questions_ar_padt-ud-dev.conllu  questions_ar_padt-ud-test.conllu  questions_ar_padt-ud-train.conllu  questions_en_ewt-ud-dev.conllu  questions_en_ewt-ud-test.conllu  questions_en_ewt-ud-train.conllu  questions_fi_tdt-ud-dev.conllu  questions_fi_tdt-ud-test.conllu  questions_fi_tdt-ud-train.conllu  questions_id_gsd-ud-dev.conllu  questions_id_gsd-ud-test.conllu  questions_id_gsd-ud-train.conllu  questions_ja_gsd-ud-dev.conllu  questions_ja_gsd-ud-test.conllu  questions_ja_gsd-ud-train.conllu  questions_ko_kaist-ud-dev.conllu  questions_ko_kaist-ud-test.conllu  questions_ko_kaist-ud-train.conllu  questions_ru_taiga-ud-dev.conllu  (+86 more)
.hydra/: config.yaml  hydra.yaml  overrides.yaml
TiDy-questions/: tidy-questions-polar-train-japanese.txt  tidy-questions-polar-valid-arabic.txt  tidy-questions-polar-valid-english.txt  tidy-questions-polar-valid-finnish.txt  tidy-questions-polar-valid-indonesian.txt  tidy-questions-polar-valid-japanese.txt  tidy-questions-wh-train-english.txt  tidy-questions-wh-train-japanese.txt  tidy-questions-wh-train-russian.txt  tidy-questions-wh-valid-arabic.txt  tidy-questions-wh-valid-indonesian.txt  tidy-questions-wh-valid-korean.txt  tidy-questions-wh-valid-russian.txt
TyDi-questions/: tidy-questions-polar-train-arabic.txt  tidy-questions-polar-train-english.txt  tidy-questions-polar-train-finnish.txt  tidy-questions-polar-train-indonesian.txt  tidy-questions-polar-train-korean.txt  tidy-questions-polar-train-russian.txt  tidy-questions-polar-valid-korean.txt  tidy-questions-polar-valid-russian.txt  tidy-questions-wh-train-arabic.txt  tidy-questions-wh-train-finnish.txt  tidy-questions-wh-train-indonesian.txt  tidy-questions-wh-train-korean.txt  tidy-questions-wh-valid-english.txt  tidy-questions-wh-valid-finnish.txt  tidy-questions-wh-valid-japanese.txt
analysis_output/: parsed_results.csv
configs/: config.yaml
data/: README.md  UD_Hindi-questions.conllu  UD_Korean-questions.conllu
datasets/: README.md  dataset_infos.json  hf_loader.py
docs/: data-analysis.ipynb  data-notebook.md  ud-testing.ipynb
experiment_runners/: ar_sweep.sh  bkp_layer_analysis.sh  debug_models.sh  finetune_sweep.sh  full_complexity_experiments.sh  full_layer_analysis.sh  full_submetric_experiments.sh  glot500_finetune.sh  glot500_probe.sh  glot500_probing.sh  run_tfidf_experiments.sh  selected_crosslingual_experiments.sh  slurm-64435590.out  sweep_probes.sh  test_finetune.sh  test_probing.sh  (+5 more)
(+6010 files in other folders)
