[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "package_name"
version = "0.1"
requires-python = ">= 3.10"
authors = [{ name = "Robin Kokot", email = "robin.edu.hr@gmail.com" }]
maintainers = [{ name = "Robin Kokot", email = "robin.edu.hr@gmail.com" }]
description = "A package to **description** (package_name)."
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [

]

[project.optional-dependencies]
dev = [
    "ruff",
    "pre-commit",
    "pytest",
]

[project.urls]
"Homepage" = "https://github.com/rokii3/qtype-eval"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]

[tool.ruff]
line-length = 120
