[tool.poetry]
name = "qtype-eval"
version = "0.1.0"
description = "Probing multilingual question types and linguistic complexity in language models."
authors = ["Robin Kokot <robin.edu.hr@gmail.com>"]
readme = "README.md"
license = "LICENSE"
repository = "https://github.com/rokii3/qtype-eval"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
numpy = ">=1.22.0"
pandas = ">=1.4.0"
scikit-learn = ">=1.0.0"
torch = ">=1.10.0"
transformers = ">=4.16.0"
datasets = ">=2.0.0"
hydra-core = ">=1.1.0"
hydra-submitit-launcher = ">=1.2.0"
matplotlib = ">=3.5.0"
seaborn = ">=0.11.2"

tqdm = ">=4.62.3"
wandb = ">=0.12.9"
xgboost = ">=1.5.0"
text2text = ">=0.3.0"

[tool.poetry.group.dev.dependencies]
ruff = "*"
pre-commit = "*"
pytest = "*"

[tool.ruff]
line-length = 120
